@@ -3,6 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- save as: doesn't repaint fsb
 - xslt mode: $foo-bar not done properly in XPath
 - popups still positioned poorly
 - broken auto-indent
